--- a/css/services-style.css
+++ b/css/services-style.css
@@ -137,6 +137,8 @@
     display: flex;
       flex-wrap: wrap;
       justify-content: center;
+            align-items: center;
+
    }
    .menu__link{
     font-size: 20px;
@@ -168,16 +170,15 @@
     display: none;
    }
   .header__button {
-    padding: 15px 40px;
-    font-size: 20px;
-    font-weight: 400;
-    color: #181a38;
-    border-radius: 35px;
-    border: 1px solid #181a38;
-    background-color: rgba(208, 214, 238, 0.301);
-    position: relative;
-    overflow: hidden;
-    letter-spacing: 1px;
+  padding: 15px 40px;
+  display: inline-block;
+  font-size: 20px;
+  font-weight: 400;
+  color: #181a38;
+  border-radius: 35px;
+  border: 1px solid #181a38;
+  background-color: rgba(208, 214, 238, 0.301);
+  letter-spacing: 1px;
    }
   .header__button:hover{
     border: 1.5px solid #181a38;
@@ -265,7 +266,7 @@
   
       .menu__list>li {
           flex-wrap: wrap;
-          margin: 0 0 30px 0;
+          margin: 0 0 20px 0;
           flex: 1 1 100%;
       }
   
@@ -277,12 +278,13 @@
           margin-bottom: 0;
       }
   
-      .menu__link {
-          font-size: 26px;
+    .menu__link {
+          font-size: 24px;
           color: white;
       }
       .header__button {
-          display: none;
+          font-size: 24px;
+          color: white;
       }
   }
   /* ========================================================================== */
