--- a/css/services-style.css
+++ b/css/services-style.css
@@ -281,6 +281,7 @@
     .menu__link {
           font-size: 24px;
           color: white;
+          line-height: 60px;
       }
       .header__button {
           font-size: 24px;
