--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,7 @@ body {
   .menu__link {
     font-size: 24px;
     color: white;
+    line-height: 60px;
   }
   .header__button{
     color: white;
